--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,8 @@ html{
 :root {
   --primary: #ffffff;          /* rgb(3, 6, 22) */
   --secondary: #fcb37f;        /* rgb(20, 48, 45) */
-  --button: #ff9627;           /* rgb(100, 217, 138) */
+  --button: #ff9627;
+  --button2: #2a6071;          /* rgb(100, 217, 138) */
   --navText: #151515;          /* rgb(147, 168, 183) */
   --white: #ffffff;
   --font-main: var(--font-space);  /* Reference to the imported Space_Grotesk font */
